--- a/started.html
+++ b/started.html
@@ -9,8 +9,7 @@
 </head>
 <body>
    
-<div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0"></script>
+
 
 <header>
 <div id="navbar">
@@ -22,12 +21,8 @@
 <main>
 
   <h1> Where to Start with Coding </h1>
-  <h6> Published _______ 2020 </h6>
-
+  <h6> Published 2020 </h6>
   
-  <div id="social-media">
-   <div class="fb-share-button" data-href="https://codepen.io/db_dev/pen/JjGdmBY" data-layout="button" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fcodepen.io%2Fdb_dev%2Fpen%2FJjGdmBY&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
-    
 
    
   </div>
@@ -42,8 +37,6 @@
 <p>Nisl purus in mollis nunc. Sollicitudin nibh sit amet commodo nulla facilisi nullam. Nunc faucibus a pellentesque sit amet porttitor eget. Nibh mauris cursus mattis molestie a. Aliquam ut porttitor leo a diam sollicitudin tempor. Facilisi cras fermentum odio eu feugiat pretium nibh ipsum. Egestas congue quisque egestas diam in. Gravida quis blandit turpis cursus in hac. Quis viverra nibh cras pulvinar mattis nunc sed blandit libero. Amet dictum sit amet justo. Viverra vitae congue eu consequat ac felis donec et odio. Sit amet tellus cras adipiscing enim. Sed elementum tempus egestas sed sed risus pretium quam vulputate. Pulvinar sapien et ligula ullamcorper malesuada proin libero nunc. Vitae tortor condimentum lacinia quis vel eros donec ac odio.</p>
 
 <p>Phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Pellentesque elit ullamcorper dignissim cras. Sit amet luctus venenatis lectus. Lacus vel facilisis volutpat est velit egestas dui id ornare. Nisl purus in mollis nunc sed id. Sit amet est placerat in egestas erat imperdiet. Vestibulum mattis ullamcorper velit sed ullamcorper. Dolor sit amet consectetur adipiscing. Sapien pellentesque habitant morbi tristique senectus. Praesent elementum facilisis leo vel fringilla est ullamcorper eget nulla. Elit sed vulputate mi sit amet. Habitasse platea dictumst quisque sagittis purus sit amet volutpat consequat. Vel facilisis volutpat est velit egestas. Pellentesque pulvinar pellentesque habitant morbi tristique senectus et netus et. </p> </div> </main>
-
- <footer> <small>&copy; Copyright 2020, codingtipsandtricks.com</small> </footer> 
 
 </body>
 </html>
