--- a/started.html
+++ b/started.html
@@ -12,11 +12,20 @@
 
 
 <header>
+
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">News</a></li>
+    <li><a href="#">Contact</a></li>
+    <li><a href="#">About</a></li>
+  </ul>
+
+ <!--
 <div id="navbar">
-  <!-- <p class="nav-element"> About </p> -->
+  <p class="nav-element"> About </p> 
     <div id = "head"> <img id = "cpu" src = "https://image.flaticon.com/icons/svg/2933/2933245.svg">
 <h2 id = "title"> Coding Tips and Tricks  </h2> </div>
-  </div> </header>
+  </div> </header>-->
 
 <main>
 
