--- a/started.html
+++ b/started.html
@@ -15,7 +15,7 @@
 
   <ul>
     <li><a href="#">Home</a></li>
-    <li><a href="#">News</a></li>
+    <li><a href="#">Content</a></li>
     <li><a href="#">Contact</a></li>
     <li><a href="#">About</a></li>
   </ul>
